--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sharp": "^1.6.46",
     "gatsby-source-contentful": "^1.3.54",
+    "gatsby-source-instagram-all": "^2.0.5",
     "gatsby-transformer-remark": "^1.7.44",
     "gatsby-transformer-sharp": "^1.6.27",
-    "lodash": "^4.17.4"
+    "lodash": "^4.17.4",
+    "yarn": "^1.15.2"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
