es gibt jetzt /vlog und /blog und die dazu gehörigen preview componenten

--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
   },
   "homepage": "https://github.com/contentful-userland/gatsby-contentful-starter#readme",
   "keywords": [
-    "gatsby",
-    "contentful"
+    "boulderboys",
+    "bouldern"
   ],
   "license": "MIT",
   "main": "n/a",
