--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/Robthemop/contentful-starter"
   },
   "dependencies": {
+    "@trendmicro/react-sidenav": "^0.4.5",
     "emotion": "^10.0.9",
     "gatsby-image": "^1.0.55",
     "gatsby-link": "^1.6.46",
@@ -18,6 +19,9 @@
     "gatsby-transformer-sharp": "^1.6.27",
     "google-maps-react": "^2.0.2",
     "lodash": "^4.17.4",
+    "react": "^16.8.6",
+    "react-iframe": "^1.8.0",
+    "react-sidebar": "^3.0.2",
     "yarn": "^1.15.2"
   },
   "devDependencies": {
