--- a/package.json
+++ b/package.json
@@ -13,15 +13,17 @@
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sharp": "^1.6.46",
+    "gatsby-remark-responsive-iframe": "^2.2.26",
     "gatsby-source-contentful": "^1.3.54",
     "gatsby-source-instagram-all": "^2.0.5",
     "gatsby-transformer-remark": "^1.7.44",
     "gatsby-transformer-sharp": "^1.6.27",
     "google-maps-react": "^2.0.2",
-    "lodash": "^4.17.4",
+    "lodash": "^4.17.15",
     "react": "^16.8.6",
     "react-iframe": "^1.8.0",
     "react-sidebar": "^3.0.2",
+    "react-spring": "^8.0.27",
     "yarn": "^1.15.2"
   },
   "devDependencies": {
