--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "url": "https://github.com/Robthemop/contentful-starter"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "@trendmicro/react-sidenav": "^0.4.5",
     "emotion": "^10.0.9",
     "gatsby-image": "^1.0.55",
@@ -63,5 +64,8 @@
     "setup": "node ./bin/setup.js",
     "heroku-postbuild": "gatsby build",
     "cleanup-repository": "rimraf bin contentful && npm uninstall contentful-import chalk inquirer rimraf "
+  },
+  "resolutions": {
+    "sharp": "0.22.1"
   }
 }
