--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-link": "^1.6.46",
     "gatsby-plugin-react-helmet": "^1.0.8",
     "gatsby-plugin-sharp": "^1.6.46",
+    "gatsby-plugin-sitemap": "^1.2.25",
     "gatsby-remark-responsive-iframe": "^2.2.26",
     "gatsby-source-contentful": "^1.3.54",
     "gatsby-source-instagram-all": "^2.0.5",
